buildroot and working import/export

--- a/web/public/jslinux/root-riscv64.cfg
+++ b/web/public/jslinux/root-riscv64.cfg
@@ -6,6 +6,5 @@
     bios: "bbl64.bin",
     kernel: "kernel-riscv64.bin",
     cmdline: "console=hvc0 ro root=root rootfstype=9p rootflags=trans=virtio",
-    fs0: { file: "./test-root-9p/" },
-    eth0: { driver: "user" },
+    fs0: { file: "./simple.9p/" },
 }
