--- a/menuconfig_vm/rootfs/simple/busybox.config
+++ b/menuconfig_vm/rootfs/simple/busybox.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.37.0
-# Thu May 29 21:47:13 2025
+# Fri May 30 18:19:22 2025
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -221,9 +221,9 @@ CONFIG_BASENAME=y
 CONFIG_CAT=y
 CONFIG_FEATURE_CATN=y
 CONFIG_FEATURE_CATV=y
-# CONFIG_CHGRP is not set
-# CONFIG_CHMOD is not set
-# CONFIG_CHOWN is not set
+CONFIG_CHGRP=y
+CONFIG_CHMOD=y
+CONFIG_CHOWN=y
 # CONFIG_FEATURE_CHOWN_LONG_OPTIONS is not set
 # CONFIG_CHROOT is not set
 # CONFIG_CKSUM is not set
@@ -234,10 +234,10 @@ CONFIG_CP=y
 # CONFIG_FEATURE_CP_REFLINK is not set
 CONFIG_CUT=y
 CONFIG_FEATURE_CUT_REGEX=y
-CONFIG_DATE=y
-CONFIG_FEATURE_DATE_ISOFMT=y
+# CONFIG_DATE is not set
+# CONFIG_FEATURE_DATE_ISOFMT is not set
 # CONFIG_FEATURE_DATE_NANO is not set
-CONFIG_FEATURE_DATE_COMPAT=y
+# CONFIG_FEATURE_DATE_COMPAT is not set
 # CONFIG_DD is not set
 # CONFIG_FEATURE_DD_SIGNAL_HANDLING is not set
 # CONFIG_FEATURE_DD_THIRD_STATUS_LINE is not set
@@ -356,13 +356,13 @@ CONFIG_UNLINK=y
 # CONFIG_UUDECODE is not set
 # CONFIG_BASE32 is not set
 # CONFIG_BASE64 is not set
-CONFIG_UUENCODE=y
+# CONFIG_UUENCODE is not set
 CONFIG_WC=y
 # CONFIG_FEATURE_WC_LARGE is not set
 # CONFIG_WHO is not set
 # CONFIG_W is not set
 # CONFIG_USERS is not set
-CONFIG_WHOAMI=y
+# CONFIG_WHOAMI is not set
 # CONFIG_YES is not set
 
 #
