--- a/menuconfig_vm/rootfs/simple/busybox.config
+++ b/menuconfig_vm/rootfs/simple/busybox.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.37.0
-# Fri May 30 18:19:22 2025
+# Fri May 30 19:16:23 2025
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -629,7 +629,7 @@ CONFIG_FALLOCATE=y
 # CONFIG_FINDFS is not set
 # CONFIG_FLOCK is not set
 # CONFIG_FDFLUSH is not set
-CONFIG_FREERAMDISK=y
+# CONFIG_FREERAMDISK is not set
 # CONFIG_FSCK_MINIX is not set
 # CONFIG_FSFREEZE is not set
 # CONFIG_FSTRIM is not set
@@ -637,7 +637,7 @@ CONFIG_GETOPT=y
 CONFIG_FEATURE_GETOPT_LONG=y
 # CONFIG_HEXDUMP is not set
 # CONFIG_HD is not set
-CONFIG_XXD=y
+# CONFIG_XXD is not set
 # CONFIG_HWCLOCK is not set
 # CONFIG_FEATURE_HWCLOCK_ADJTIME_FHS is not set
 # CONFIG_IONICE is not set
@@ -655,8 +655,8 @@ CONFIG_XXD=y
 # CONFIG_FEATURE_MDEV_EXEC is not set
 # CONFIG_FEATURE_MDEV_LOAD_FIRMWARE is not set
 # CONFIG_FEATURE_MDEV_DAEMON is not set
-CONFIG_MESG=y
-CONFIG_FEATURE_MESG_ENABLE_ONLY_GROUP=y
+# CONFIG_MESG is not set
+# CONFIG_FEATURE_MESG_ENABLE_ONLY_GROUP is not set
 # CONFIG_MKE2FS is not set
 # CONFIG_MKFS_EXT2 is not set
 # CONFIG_MKFS_MINIX is not set
@@ -677,7 +677,7 @@ CONFIG_MOUNT=y
 CONFIG_FEATURE_MOUNT_FLAGS=y
 CONFIG_FEATURE_MOUNT_FSTAB=y
 CONFIG_FEATURE_MOUNT_OTHERTAB=y
-# CONFIG_MOUNTPOINT is not set
+CONFIG_MOUNTPOINT=y
 # CONFIG_NOLOGIN is not set
 # CONFIG_NOLOGIN_DEPENDENCIES is not set
 # CONFIG_NSENTER is not set
@@ -789,7 +789,7 @@ CONFIG_FEATURE_CROND_DIR=""
 # CONFIG_FLASH_LOCK is not set
 # CONFIG_FLASH_UNLOCK is not set
 # CONFIG_FLASHCP is not set
-CONFIG_GETFATTR=y
+# CONFIG_GETFATTR is not set
 # CONFIG_HDPARM is not set
 # CONFIG_FEATURE_HDPARM_GET_IDENTITY is not set
 # CONFIG_FEATURE_HDPARM_HDIO_SCAN_HWIF is not set
@@ -797,7 +797,7 @@ CONFIG_GETFATTR=y
 # CONFIG_FEATURE_HDPARM_HDIO_DRIVE_RESET is not set
 # CONFIG_FEATURE_HDPARM_HDIO_TRISTATE_HWIF is not set
 # CONFIG_FEATURE_HDPARM_HDIO_GETSET_DMA is not set
-CONFIG_HEXEDIT=y
+# CONFIG_HEXEDIT is not set
 # CONFIG_I2CGET is not set
 # CONFIG_I2CSET is not set
 # CONFIG_I2CDUMP is not set
@@ -823,7 +823,7 @@ CONFIG_FEATURE_LESS_MAXLINES=0
 # CONFIG_FEATURE_MAKEDEVS_TABLE is not set
 # CONFIG_MAN is not set
 # CONFIG_MICROCOM is not set
-CONFIG_MIM=y
+# CONFIG_MIM is not set
 # CONFIG_MT is not set
 # CONFIG_NANDWRITE is not set
 # CONFIG_NANDDUMP is not set
@@ -834,12 +834,12 @@ CONFIG_MIM=y
 # CONFIG_RUNLEVEL is not set
 # CONFIG_RX is not set
 # CONFIG_SEEDRNG is not set
-CONFIG_SETFATTR=y
-CONFIG_SETSERIAL=y
+# CONFIG_SETFATTR is not set
+# CONFIG_SETSERIAL is not set
 # CONFIG_STRINGS is not set
 # CONFIG_TIME is not set
-CONFIG_TREE=y
-CONFIG_TS=y
+# CONFIG_TREE is not set
+# CONFIG_TS is not set
 # CONFIG_TTYSIZE is not set
 # CONFIG_UBIATTACH is not set
 # CONFIG_UBIDETACH is not set
@@ -1055,7 +1055,7 @@ CONFIG_FEATURE_MIME_CHARSET=""
 # CONFIG_IOSTAT is not set
 CONFIG_KILL=y
 CONFIG_KILLALL=y
-CONFIG_KILLALL5=y
+# CONFIG_KILLALL5 is not set
 # CONFIG_LSOF is not set
 # CONFIG_MPSTAT is not set
 # CONFIG_NMETER is not set
@@ -1092,7 +1092,7 @@ CONFIG_FEATURE_PS_LONG=y
 #
 # Runit Utilities
 #
-# CONFIG_CHPST is not set
+CONFIG_CHPST=y
 # CONFIG_SETUIDGID is not set
 # CONFIG_ENVUIDGID is not set
 # CONFIG_ENVDIR is not set
