--- a/web/public/jslinux/root-riscv64.cfg
+++ b/web/public/jslinux/root-riscv64.cfg
@@ -5,6 +5,6 @@
     memory_size: 128,
     bios: "bbl64.bin",
     kernel: "kernel-riscv64.bin",
-    cmdline: "console=hvc0 ro root=root rootfstype=9p rootflags=trans=virtio quiet",
+    cmdline: "console=hvc0 ro root=root rootfstype=9p rootflags=trans=virtio quiet autologin",
     fs0: { file: "./simple.9p/" },
 }
