--- a/menuconfig_vm/rootfs/simple/busybox.config
+++ b/menuconfig_vm/rootfs/simple/busybox.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.37.0
-# Fri May 30 20:44:01 2025
+# Sat May 31 13:31:52 2025
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -837,7 +837,7 @@ CONFIG_FEATURE_LESS_MAXLINES=0
 # CONFIG_SETFATTR is not set
 # CONFIG_SETSERIAL is not set
 # CONFIG_STRINGS is not set
-# CONFIG_TIME is not set
+CONFIG_TIME=y
 # CONFIG_TREE is not set
 # CONFIG_TS is not set
 # CONFIG_TTYSIZE is not set
