Moving out of the jslinux tree

--- a/web/public/menuconfig-riscv64.cfg
+++ b/web/public/menuconfig-riscv64.cfg
@@ -3,8 +3,8 @@
     version: 1,
     machine: "riscv64",
     memory_size: 128,
-    bios: "bbl64.bin",
-    kernel: "kernel-riscv64.bin",
+    bios: "jslinux/bbl64.bin",
+    kernel: "jslinux/kernel-riscv64.bin",
     cmdline: "console=hvc0 ro root=root rootfstype=9p rootflags=trans=virtio quiet autologin autokconfig",
-    fs0: { file: "./simple.9p/" },
+    fs0: { file: "./fs/simple.9p/" },
 }
