--- a/builder/build_environment/Containerfile
+++ b/builder/build_environment/Containerfile
@@ -1,18 +1,18 @@
-FROM bitnami/minideb:latest AS pruchain_downloader
+FROM bitnami/minideb:bookworm AS pruchain_downloader
 RUN install_packages git ca-certificates wget lbzip2 xz-utils
 RUN git clone https://github.com/dinuxbg/gnupru -b 2024.05 --depth 1 /usr/src/gnupru
 WORKDIR /usr/src/gnupru
 ENV PREFIX=/opt/gnupru
 RUN ./download-and-prepare.sh
 
-FROM bitnami/minideb:latest AS pruchain_builder
+FROM bitnami/minideb:bookworm AS pruchain_builder
 RUN install_packages git pv ca-certificates wget lbzip2 xz-utils gcc build-essential file texinfo libgmp-dev libmpfr-dev libmpc-dev
 COPY --from=pruchain_downloader /usr/src/gnupru /usr/src/gnupru/
 WORKDIR /usr/src/gnupru
 ENV PREFIX=/opt/gnupru
 RUN ./build.sh
 
-FROM bitnami/minideb:latest AS or1k_downloader
+FROM bitnami/minideb:bookworm AS or1k_downloader
 RUN install_packages curl ca-certificates
 RUN curl -L# 'https://more.musl.cc/10/x86_64-linux-musl/or1k-linux-musl-cross.tgz' | tar -C /opt -xz
 
@@ -28,11 +28,15 @@ RUN \
       gcc-avr avr-libc \
       libc6-dev gcc \
       libmpc3 libgmp10 libmpfr6
+RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.11 311
 COPY --from=or1k_downloader /opt/or1k-linux-musl-cross /opt/or1k-linux-musl-cross/
 COPY --from=pruchain_builder /opt/gnupru /opt/gnupru/
 ENV PATH=${PATH}:/opt/:/opt/gnupru/bin:/opt/or1k-linux-musl-cross/bin
 RUN \
    mkdir /media/inbox /media/outbox /media/git &&\
    git config --system safe.directory /media/git
+ADD get-srctree kbs_builder entrypoint /usr/local/bin/
+ENTRYPOINT [ "/usr/local/bin/entrypoint" ]
+CMD []
 USER klipper
 
