--- a/builder/build_environment/Containerfile
+++ b/builder/build_environment/Containerfile
@@ -36,6 +36,7 @@ RUN \
    mkdir /media/inbox /media/outbox /media/git &&\
    git config --system safe.directory /media/git
 ADD get-srctree kbs_builder entrypoint /usr/local/bin/
+ENV SHELL=/bin/bash
 ENTRYPOINT [ "/usr/local/bin/entrypoint" ]
 CMD []
 USER klipper
