--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,11 +4,27 @@ repos:
  -  repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
     hooks:
-     -  id: check-case-conflict
-     -  id: check-executables-have-shebangs
-     -  id: check-shebang-scripts-are-executable
-     -  id: check-illegal-windows-names
-     -  id: trailing-whitespace
-     -  id: end-of-file-fixer
-     -  id: check-yaml
-     -  id: check-added-large-files
+      - id: check-case-conflict
+      - id: check-executables-have-shebangs
+      - id: check-shebang-scripts-are-executable
+      - id: check-illegal-windows-names
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-yaml
+      - id: check-added-large-files
+ -  repo: local
+    hooks: &mbake
+      - id: mbake-format
+        name: Makefile formatting (mbake)
+        description: Format makefiles with Mbake
+        language: python
+        additional_dependencies:
+          - 'mbake'
+        entry: mbake format --config ./.bake.toml
+        files: Makefile$
+      - id: mbake-validate
+        name: Makefile validate (mbake)
+        description: Validate makefiles with Mbake
+        entry: mbake validate --config ./.bake.toml
+        files: Makefile$
+        <<: *mbake
