--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
- -  repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
     hooks:
       - id: check-case-conflict
@@ -12,19 +12,12 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
- -  repo: local
-    hooks: &mbake
+  - repo: https://github.com/psf/black
+    rev: 25.1.0
+    hooks:
+      - id: black
+  - repo: https://github.com/EbodShojaei/bake
+    rev: v1.2.1
+    hooks:
       - id: mbake-format
-        name: Makefile formatting (mbake)
-        description: Format makefiles with Mbake
-        language: python
-        additional_dependencies:
-          - 'mbake'
-        entry: mbake format --config ./.bake.toml
-        files: Makefile$
       - id: mbake-validate
-        name: Makefile validate (mbake)
-        description: Validate makefiles with Mbake
-        entry: mbake validate --config ./.bake.toml
-        files: Makefile$
-        <<: *mbake
