--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,12 +13,19 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
+
   - repo: https://github.com/psf/black
     rev: 25.1.0
     hooks:
       - id: black
+
   - repo: https://github.com/EbodShojaei/bake
     rev: v1.2.1
     hooks:
       - id: mbake-format
       - id: mbake-validate
+
+  - repo: https://github.com/shellcheck-py/shellcheck-py
+    rev: v0.10.0.1
+    hooks:
+      - id: shellcheck
