--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,12 +32,14 @@ repos:
     hooks:
       - id: prettier
         name: Prettier
-        description: Format JS
+        description: Format JS, HTML
         language: node
         additional_dependencies:
           - prettier
         entry: prettier --write
-        types: [javascript]
+        types_or:
+          - javascript
+          - html
       - id: jshint
         name: JSHint
         description: Lint Javascript
