--- a/web/public/menuconfig-riscv64.cfg
+++ b/web/public/menuconfig-riscv64.cfg
@@ -6,5 +6,5 @@
     bios: "jslinux/bbl64.bin",
     kernel: "jslinux/kernel-riscv64.bin",
     cmdline: "console=hvc0 ro root=root rootfstype=9p rootflags=trans=virtio quiet autologin autokconfig",
-    fs0: { file: "./fs/tartest/" },
+    fs0: { file: "./fs/rootfs-v1/" },
 }
