fix: don't acidentally publish the new kernel, it doesn't work yet...

--- a/web/public/menuconfig-riscv64.cfg
+++ b/web/public/menuconfig-riscv64.cfg
@@ -4,7 +4,7 @@
     machine: "riscv64",
     memory_size: 128,
     bios: "jslinux/bbl64.bin",
-    kernel: "jslinux/kernel-riscv64-new.bin",
+    kernel: "jslinux/kernel-riscv64.bin",
     cmdline: "console=hvc0 ro root=root rootfstype=9p rootflags=trans=virtio",
     fs0: { file: "./fs/rootfs-v1/" },
 }
