chore: starting to walk back to old versions from bellard.org

--- a/menuconfig_vm/rootfs/simple/Makefile
+++ b/menuconfig_vm/rootfs/simple/Makefile
@@ -29,6 +29,6 @@ web:
 	rsync -r --delete httpfs/ ../../../web/public/fs/tartest/
 
 httpfs/head: buildroot/output/images/rootfs.tar
-	python3.11 ./tar2filelist.py
+	./tar2filelist.py
 
 .PHONY: all br-% busybox-config
